--- a/mirror/Packages/manifest.json
+++ b/mirror/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.stinkysteak.netcode-benchmarker-util": "https://github.com/StinkySteak/netcode-benchmarker-util.git",
     "com.stinkysteak.simulationtimer": "https://github.com/StinkySteak/Unity-Simulation-Timer.git",
     "com.tayx.graphy": "https://github.com/Tayx94/graphy.git",
+    "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.ai.navigation": "2.0.9",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.visualstudio": "2.0.17",
